--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <header>
         <div class="container">
             <div class="header-top">
-                <a href="#" class="logo">VOGUE<span>.</span></a>
+                <a href="#" class="logo">SUBASH<span>.</span></a>
                 <div class="header-actions">
                     <a href="#"><i class="fas fa-search"></i></a>
                     <a href="#"><i class="fas fa-user"></i></a>
