--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <header>
         <div class="container">
             <div class="header-top">
-                <a href="#" class="logo">SUBASH<span>.</span></a>
+                <a href="#" class="logo"> Jessica <span>.</span></a>
                 <div class="header-actions">
                     <a href="#"><i class="fas fa-search"></i></a>
                     <a href="#"><i class="fas fa-user"></i></a>
@@ -654,9 +654,9 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, New York, NY</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@voguefashion.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Doha ,Qatar </li>
+                        <li><i class="fas fa-phone"></i> +974 50928532</li>
+                        <li><i class="fas fa-envelope"></i> khadkajessica0@gmail.com </li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 9AM - 6PM</li>
                     </ul>
                 </div>
