--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VOGUE | Modern Fashion</title>
+    <title>Jessica | Modern Fashion</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -621,7 +621,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>VOGUE is a premium fashion brand dedicated to providing high-quality clothing and accessories for the modern man.</p>
+                    <p>Jessica is a premium fashion brand dedicated to providing high-quality clothing and accessories for the modern man.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -662,7 +662,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 VOGUE Fashion. All Rights Reserved. Designed with ❤️</p>
+                <p>&copy; 2023 Jessica Fashion. All Rights Reserved. Designed with ❤️</p>
             </div>
         </div>
     </footer>
