--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Jessica Fashion. All Rights Reserved. Designed with ❤️</p>
+                <p>&copy; 2023 Jessica Fashion. All Rights Reserved. Designed By Season</p>
             </div>
         </div>
     </footer>
