--- a/index.html
+++ b/index.html
@@ -652,14 +652,28 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Contact Info</h3>
-                    <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Doha ,Qatar </li>
-                        <li><i class="fas fa-phone"></i> +974 50928532</li>
-                        <li><i class="fas fa-envelope"></i> khadkajessica0@gmail.com </li>
-                        <li><i class="fas fa-clock"></i> Mon-Fri: 9AM - 6PM</li>
-                    </ul>
-                </div>
+                <h3>Contact Info</h3>
+                <ul class="footer-links">
+                    <li>
+                        <i class="fas fa-map-marker-alt"></i>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Doha,+Qatar" target="_blank" rel="noopener">
+                            Doha, Qatar
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-phone"></i>
+                        <a href="tel:+97450928532">+974 50928532</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:khadkajessica0@gmail.com">khadkajessica0@gmail.com</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-clock"></i>
+                        Mon–Fri: 9AM – 6PM
+                    </li>
+                </ul>
+            </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2023 Jessica Fashion. All Rights Reserved. Designed By Season</p>
