--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
             text-align: center;
         }
 
+        .hero-btns {
+             margin-top: 10rem; /* adjust this value as needed, e.g., 4rem, 5rem, etc. */
+        }   
+
         .hero-content {
             max-width: 700px;
             margin: 0 auto;
@@ -582,12 +586,6 @@
         <div class="hero-content">
             <h1>Elevate Your Style</h1>
             <p>Discover the latest trends in fashion with our premium collection of clothing and accessories.</p>
-            <div class="hero-btns">
-
-            </div>
-            <div class="hero-btns">
-                
-            </div>
             <div class="hero-btns">
                 <a href="#products" class="btn">Shop Now</a>
                 <a href="#categories" class="btn btn-outline">View Collection</a>
